--- a/Sicsoft.Checkin.Web/Pages/Asuntos/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Asuntos/Index.cshtml
@@ -84,7 +84,7 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-8">
-                        <h5>Impuestos</h5>
+                        <h5>Asuntos</h5>
                     </div>
                     <div class="col-md-4">
                         <a asp-page="Nuevo" class="btn btn-rounded btn-outline-primary" title="Agregar">+  Agregar</a>
