--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -63,15 +63,15 @@
                 pagebreak: { mode:[ 'avoid-all','css', 'legacy']  },
 
                 image: { type: 'jpeg', quality: 0.98 },
-                html2canvas: { scale: 2,logging:true,dpi:192,letterRendering:true },
-                jsPDF: { unit:'mm',format: 'a4', orientation: 'portrait' }
+                html2canvas: { scale: 1,logging:true,dpi:192,letterRendering:true },
+                jsPDF: { unit:'mm',format: 'a3', orientation: 'portrait' }
             };
 
 
 
             html2pdf().set(opt)
                 .from(item)
-                .save("Llamda.pdf");
+                .save("Llamada.pdf");
 
         }         
     </script>
