--- a/Sicsoft.Checkin.Web/Pages/Account/RegistroUsuario.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Account/RegistroUsuario.cshtml
@@ -261,6 +261,14 @@
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-md-4 pr-1">
+                            <div class="form-group">
+                                <label for="Bodega">Codigo Bodega</label>
+                                <input type="text" id="CodBodega" class="form-control form-control-lg" asp-for="Input.Bodega" required placeholder="Cod Vendedor SAP">
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="row">
                         <div class="col-md-12">
