--- a/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
@@ -39,7 +39,8 @@
                             <ul class="nav flex-column">
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "1").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "1").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Usuarios/Index">Usuarios</a>
@@ -49,7 +50,8 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "8").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "8").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Bitacora/Index">Bitacora Errores</a>
@@ -59,7 +61,8 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "6").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "6").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Sucursales/Index">Sucursales</a>
@@ -71,7 +74,8 @@
 
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "9").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "9").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Tecnicos/Index">Técnicos</a>
@@ -82,7 +86,8 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "11").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "11").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Status/Index">Status</a>
@@ -93,7 +98,8 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "13").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "13").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Garantias/Index">Garantias</a>
@@ -103,7 +109,8 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "17").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "17").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/TiposCasos/Index">Tipos Casos</a>
@@ -114,7 +121,8 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "19").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "19").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/ProductosPadres/Index">Productos Padres</a>
@@ -125,7 +133,8 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "27").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "27").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Diagnosticos/Index">Diagnóstico</a>
@@ -135,7 +144,8 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "29").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "29").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/TiposErrores/Index">Tipos Errores</a>
@@ -145,7 +155,8 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "37").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "37").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Impuestos/Index">Impuestos</a>
@@ -155,7 +166,8 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "40").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "40").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Asuntos/Index">Asuntos</a>
@@ -180,7 +192,8 @@
                             <ul class="nav flex-column">
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "15").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "15").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Llamadas/Index">Llamadas Servicio</a>
@@ -202,7 +215,8 @@
 
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "21").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "21").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Reparacion/Index">Reparaciones</a>
@@ -223,7 +237,8 @@
 
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "25").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "25").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Bodega/Index">Bodega</a>
@@ -244,7 +259,8 @@
 
 
                                 <li class="nav-item">
-                                    @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "34").FirstOrDefault()))
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "34").FirstOrDefault()))
                                         {
 
                                             <a class="nav-link" asp-page="/Movimientos/Index">Movimientos</a>
@@ -258,6 +274,36 @@
                         </div>
                     </li>
 
+                    @{
+                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "43").FirstOrDefault()))
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-6" aria-controls="submenu-5"><i class="fas fa-clipboard-list"></i>Ordenes de Venta <span class="badge badge-success">6</span></a>
+                                <div id="submenu-6" class="collapse submenu" style="">
+                                    <ul class="nav flex-column">
+
+
+                                        <li class="nav-item">
+                                            @{
+                                                if (!string.IsNullOrEmpty(Roles.Where(a => a == "43").FirstOrDefault()))
+                                                {
+
+                                                    <a class="nav-link" asp-page="/OrdenVenta/Index">Orden Venta</a>
+                                                }
+
+                                            }
+
+                                        </li>
+
+                                    </ul>
+                                </div>
+                            </li>
+                        }
+
+
+                    }
+
+
                 </ul>
             </div>
         </nav>
@@ -265,17 +311,3 @@
 </div>
 <!-- ============================================================== -->
 <!-- end left sidebar -->
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
