--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -585,7 +585,7 @@
             console.log(JSON.stringify(recibido));
 
             Swal.fire({
-                title: '¿Desea guardar los cambios?',
+                title: '¿Desea crear la entrada?',
                 showDenyButton: true,
                 showCancelButton: false,
                 confirmButtonText: `Aceptar`,
