--- a/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
@@ -305,7 +305,7 @@
                         </div>
                         <div class="col-md-4 pl-1">
                             <div class="form-group">
-                                <label for="CodVendedor">Codigo Usuario SAP</label>
+                                <label for="CodVendedor">Codigo Empleado SAP</label>
                                 <input type="text" id="CodVendedor" class="form-control form-control-lg" asp-for="Input.CardCode" required placeholder="Cod Vendedor SAP">
                             </div>
                         </div>
