--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -126,7 +126,7 @@
                 input: "text",
                 inputValue: correo,
                 showCancelButton: true,
-                confirmButtonText: "Guardar",
+                confirmButtonText: "Enviar",
                 cancelButtonText: "Cancelar",
                 inputValidator: nombre => {
                     // Si el valor es válido, debes regresar undefined. Si no, una cadena
@@ -134,11 +134,13 @@
                         return "Por favor escribe el correo";
                     } else {
                         return undefined;
+                       
                     }
                 }
             })
                 .then(resultado => {
                     if (resultado.value) {
+                         $("#divProcesando").modal("show");
                         let nombre = resultado.value;
                         correo = nombre;
                         Reenviar();
@@ -162,6 +164,7 @@
                 success: function(result) {
                     console.log(result);
                     if (result == false) {
+                        $("#divProcesando").modal("hide");
                         ids = 0;
                         Swal.fire({
                             icon: 'error',
@@ -171,7 +174,9 @@
                         })
 
                     } else {
+                            $("#divProcesando").modal("hide");
                         Swal.fire({
+                        
                             title: "Ha sido reenviado con éxito",
 
                             icon: 'success',
