--- a/Sicsoft.Checkin.Web/Pages/Tecnicos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Tecnicos/Editar.cshtml
@@ -51,7 +51,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label>Cod SAP</label>
+                                <label>Cod SAP (Codigo Vendedor)</label>
                                 <input type="text" class="form-control form-control-lg" id="codsap" placeholder="Cod. SAP" asp-for="Input.idSAP" required>
                             </div>
                         </div>
